static/style.css
/* tables */
table.viewtable {
	font-family:Verdana, "Tahoma", "Helvetica", "arial", "sans";;
	background-color: #CDCDCD;
	margin:10px 0pt 15px;
	font-size: 12pt;
	width: 100%;
	text-align: left;
}
table.viewtable thead tr th, table.viewtable tfoot tr th {
	background-color: #e6EEEE;
	border: 1px solid #FFF;
	font-size: 14pt;
	padding: 4px;
}
table.viewtable thead tr .header {
	background-image: #D0D0EE;
	cursor: pointer;
}
table.viewtable tbody td {
	color: #3D3D3D;
	padding: 4px;
	background-color: #FFF;
	vertical-align: top;
    font-weight: bold;
}
table.viewtable tbody tr.odd td {
	background-color:#F0F0F6;
}
table.viewtable tbody tr.critical td {
	background-color:#F06868;
}
table.viewtable tbody tr.warning td {
	background-color:yellow;
}
table.viewtable tbody tr.ok td {
	background-color:green;
}
table.viewtable tbody tr.unknown td {
	background-color:lightgrey;
}
table.viewtable thead tr .sorting_desc {
	background-image: url(white_overlay.png);
}
table.viewtable .even {
    background-image: url(white_overlay.png);
}
h1.tabletitle {
    text-align: center;
}
#login {
    text-align: center;
}
#login fieldset {
    border-radius: 5;
    display: inline-block;
    text-align: right;
}
#login fieldset label {
    text-align: right;
    margin-right: 1em;
    width: 4em;
    float: left;
    display: block;
}
#login fieldset input {
    text-align: right;
    margin-left: 2em;
}
#login .error {
    color: red;
    font-style: italic;
}
/*divs*/
#msgBox {
    text-align: center;
}
#msgBox div {
    display: inline;
    padding: 5px;
    background-color:yellow;
    border-radius: 10px;
    box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
}
#footer {
    text-align: right;
}

